2012-09-05  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-score.el (gnus-score-decode-text-parts): Use #' for the local function.

	* gnus-logic.el (gnus-advanced-body): Allow scoring on decoded bodies.

	* gnus-score.el (gnus-score-decode-text-parts): Ditto.

2012-09-05  Magnus Henoch  <magnus.henoch@gmail.com>

	* nnmaildir.el: Make nnmaildir understand and write maildir flags.
	That is, rename files from "unique:2," to "unique:2,S" for "seen", etc.
	This should make nnmaildir more usable with offlineimap.

2012-09-05  Julien Danjou  <julien@danjou.info>

	* nnimap.el (nnimap-request-list): Revert change that made listing
	synchronous.
	(nnimap-get-responses): Restore.

2012-09-03  Lars Ingebrigtsen  <larsi@gnus.org>

	* dgnushack.el: XEmacs 21.5 compilation fix.

	* gnus-notifications.el (gnus-notifications-notify): Use it.

	* gnus-fun.el (gnus-funcall-no-warning): New function to silence
	warnings on XEmacs.

2012-09-01  Paul Eggert  <eggert@cs.ucla.edu>

	Better seeds for (random).
	* gnus-sync.el (gnus-sync-lesync-setup):
	* message.el (message-canlock-generate, message-unique-id):
	Change (random t) to (random), now that the latter is more random.

2012-08-31  Dave Abrahams  <dave@boostpro.com>
	* nnimap.el (nnimap-change-group): Document result value

	* auth-source.el (auth-sources): Fix macos keychain access.

	* gnus-int.el (gnus-request-head): When gnus-override-method is set,
	allow the backend `request-head' function to determine the group
	name on its own.
	(gnus-request-expire-articles): Filter out negative article numbers
	during expiry (Bug#11980).

	* gnus-range.el (gnus-set-difference): Change gnus-set-difference from
	O(N^2) to O(N).  This makes warping into huge groups tolerable.

	* gnus-registry.el (gnus-try-warping-via-registry): Don't act as though
	you've found the article when you haven't.

	* nnimap.el (nnimap-find-article-by-message-id): Account for the fact that
	nnimap-change-group can return t
